# FEUP-CAL

./: 2020-21 MIEIC 2S CAL Pauta - Google Drive.html
Hackrank/: CMakeLists.txt  balancing_weights.cpp
Projeto/1ª Entrega/: E-Stafetas - Report - CAL.docx
Projeto/Projeto-CAL/: CMakeLists.txt  README.md
Projeto/Projeto-CAL/Graphs/GridGraphs/4x4/: edges.txt
Projeto/Projeto-CAL/Graphs/Penafiel/: edges_penafiel.txt  nodes_penafiel.txt
Projeto/Projeto-CAL/src/: InputParameters.h  MutablePriorityQueue.h  main.cpp
Projeto/Projeto-CAL/src/entities/: Package.cpp  Package.h  Vehicle.cpp  Vehicle.h
Projeto/Projeto-CAL/src/graph/: Graph.cpp  Graph.h  GraphDataLoader.cpp  GraphDataLoader.h  GraphElements.cpp  GraphElements.h
Projeto/Projeto-CAL/src/interface/: GraphDrawer.cpp  GraphDrawer.h  Menu.cpp  Menu.h
Resumos/: INDICE.docx
TP1/cal_fp01_CLion/TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp
TP10/: CMakeLists.txt
TP10/TP10/: ex1.cpp  ex2.cpp
TP2/CAL-Quickstart/: main.cpp
TP2/CAL-Quickstart/TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp
TP2/CAL-Quickstart/TP2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  exercises.h
TP4/TP4/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp
TP5/TP5/: Graph.h  ex1.cpp  ex2.cpp
TP6/TP6/: Graph.h  ex2.cpp  ex3.cpp  ex4.cpp
TP7/TP7/: Graph.h
TP8/TP8/: CMakeLists.txt  Graph.h
TP8/TP8_graphviewer/: CMakeLists.txt
TP8/TP8_graphviewer/TP8_graphviewer/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  main.cpp
TP9/: CMakeLists.txt
TP9/TP9/: Graph.h
(+2 files in other folders)
